--- a/_posts/2018-06-04-exchange.markdown
+++ b/_posts/2018-06-04-exchange.markdown
@@ -7,6 +7,8 @@ alt: Imagem de um avião decolando
 project-date: 
 client: 
 category: 
-description: Description image
+description: Viajar e conhecer novos lugares, sempre!
 
 ---
+
+Se eu tivesse neste exato momento, dinheiro para comprar a casa dos meus sonhos no lugar que eu desejasse, provavelmente iria torrar tudo viajando hahaha... Não penso em criar raízes em algum lugar ainda, claro que gostaria de ter um imóvel, mas se for para escolher entre me fixar **ou** viajar, já vou tirar meu passaporte. Nunca saí do Brasil, mas pretendo fazer isso nos próximos anos, quero conhecer outros países, outras culturas, talvez ter a experiência de morar fora quem sabe...
