--- a/_posts/2018-06-04-run.markdown
+++ b/_posts/2018-06-04-run.markdown
@@ -7,6 +7,9 @@ alt: Imagem mostra um atleta correndo
 project-date:
 client: 
 category: 
-description: Description of image
+description: Um de meus hobbys
 
 ---
+
+Se tem uma atividade física que eu gosto é de correr, isso me fez superar alguns problemas de saúde que tive quando criança, e percebi que poderia ser "bom" em algum esporte... Comecei a correr alguns quilômetros quando tinha 15 anos e desde então não parei, aumentei a distância até conseguir fazer uma meia maratona, mas agora quero reduzir meu tempo por quilômetro.
+Atualmente estou fazendo 1 km em 5:39 min, a meta é reduzir esse tempo para 4 min. Não parece tão difícil, mas manter essa velocidade por 10 quilômetros é quase impossível pra mim neste momento hahaha... Estou trabalhando nisso, fazendo treinos de fortalecimento, aumentando a resistência e ganhando fôlego :)
